fix: CORS pattern origins, flexible auth routes, and resilient apiBase URL handling